misc/vs.yaml
# apiVersion: k8s.nginx.org/v1
# kind: VirtualServer
# metadata:
#   name: nodeos
#   namespace: nodeos
# spec:
#   host: helixious.local
#   # tls:
#   #   secret: cafe-secret
#   upstreams:
#   - name: server
#     service: nodeos-svc
#     port: 8888
#   routes:
#   - path: /test
#     action:
#       pass: server





apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress
  # namespace: nodeos
spec:
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
     #annotations:
       #prometheus.io/scrape: "true"
       #prometheus.io/port: "9113"
    spec:
      serviceAccountName: nodeos-ingress
      containers:
      - image: nginx/nginx-ingress:1.7.1
        name: nginx-ingress
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
       #- name: prometheus
         #containerPort: 9113
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #nginx
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
         #- -v=3 # Enables extensive logging. Useful for troubleshooting.
         #- -report-ingress-status
         #- -external-service=nginx-ingress
         #- -enable-leader-election
         #- -enable-prometheus-metrics
         #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration


---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nodeos
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-ingress
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodeos-ingress
  namespace: nodeos
  annotations:
    # kubernetes.to/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: helixious.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nodeos-svc
          servicePort: 8888
      - path: /master/p2p
        backend:
          serviceName: nodeos-svc
          servicePort: 9000
